Gradle: allow using the configuration cache (#180)
Gradle's configuration cache aims to avoid costly operations that happen during Gradle's configuration phase, which can be comparabily expensive.

However, using the configuration cache adds some constraints on everything (plugins, custom tasks, build scripts) used in a Gradle build. For example, capturing some types (e.g. `Configuration`, `DependencySet`) is not possible, need to narrow to "more precise" types (like `FileCollection`).

Also add a Java matrix CI for 11, 17, 19